# giskard-test

./: .gitignore  README.md  paper-review.md  pyproject.toml
draft/: gen-mT5.py  genetic-like.py  gpt2-trl.py  imdb-trl1.py  main.py  main2.py  main3.py  main4-2.py  main4.py  main5.py  mt5-testing2.py  sentiment.py  trl-attempt.py  trl-attempt2.py  trl-attempt2lr1e4.py  trl-attempt3.py  trl-back.py  trl-imdb-pos-reviews.py  trl-imdb-pos-reviews2.py  trl-imdb-pos-reviews3.py  trl-imdb-pos-reviews4.py  trl-imdb-pos-reviews4lr1.py
draft/genetic-like-data/: data.tsv  gen-output.tsv
src/chameleon/probes/: __init__.py  gpt2trl.py
tests/: test_gpt2tlr_probe.py
